2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* server.c (SLOT_): Take additional argument root.  Use it rather
	than THREAD->ASPACE.  Update users.
	(SLOT): Likewise.
	(CAP_): Likewise.
	(CAP): Likewise.
	(ROOT): New macro.
	(server_loop): Update cap_read, object_slot_copy_out,
	object_slot_copy_in, object_slot_read, cap_copy_x, and cap_copy
	method implementations to new API.
	* as.h (as_insert): Take additional argument AS_ROOT_ADDR.
	Update users.
	* as.c (as_build_internal): Take additional argument
	AS_ROOT_ADDR.  Pass it to cap_copy_x.
	(as_slot_ensure_full): Take additional argument AS_ROOT_ADDR.
	Pass it to as_build_internal.
	(as_insert): Likewise.
	* thread.c (thread_exregs): Update use of cap_copy to conform
	with new API.
	* cap.h (cap_set): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos_LDADD): Link with
	../libc-parts/libc-kernel.a, not ../libc-parts/libc-parts.a

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* thread.c (thread_init): Clear BUFFER.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* mmap.c: Remove file.
	* Makefile.am (viengoos_SOURCES): Remove mmap.c.

2008-01-23  Neal H. Walfield  <neal@gnu.org>

	* thread.c: Include "zalloc.h".
	(thread_init): Initialize TID_TO_THREAD hash here.  Allocate using
	zalloc.
	* object.c: Include "zalloc.h".
	(object_init): Allocate hash table and object_descs using zalloc.
	* Makefile.am (viengoos_SOURCES): Remove malloc.h and
	malloc-wrap.c.
	(viengoos_LDADD): Use ../libhurd-ihash/libhurd-ihash-nomalloc.a
	rather than ../libhurd-ihash/libhurd-ihash.a.
	(EXTRA_viengoos_SOURCES): Remove variable.

	* memory.c (memory_grab) [_L4_TEST_ENVIRONMENT]: Don't include
	binary when calculating available memory.

2008-01-22  Neal H. Walfield  <neal@gnu.org>

	* mutex.h: New file, copy ../hurd/mutex.h.

	* ager.c: Include "mutex.h", not <hurd/mutex.h>.
	* object.h: Likewise.
	* t-environment.h: Likewise.
	* viengoos.c: Likewise.

2008-01-17  Neal H. Walfield  <neal@gnu.org>
